--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-redux": "^5.0.0-alpha.9",
-    "react-scripts": "1.1.1",
+    "react-scripts": "^2.1.5",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.1",
@@ -32,7 +32,12 @@
     "lint": "eslint --fix src/**/*.js src/**/*.jsx"
   },
   "devDependencies": {
-    "eslint": "^5.14.1",
     "eslint-plugin-react": "^7.12.4"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
