--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.1",
     "redux-thunk": "^2.2.0",
-    "slug": "^0.9.1"
+    "slug": "^0.9.1",
+    "eslint-plugin-react": "^7.12.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,7 +33,7 @@
     "lint": "eslint --fix src/**/*.js src/**/*.jsx"
   },
   "devDependencies": {
-    "eslint-plugin-react": "^7.12.4"
+    
   },
   "browserslist": [
     ">0.2%",
