--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.1",
     "redux-thunk": "^2.2.0",
-    "slug": "^0.9.1",
-    "eslint-plugin-react": "^7.12.4"
+    "slug": "^0.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,7 +32,8 @@
     "lint": "eslint --fix src/**/*.js src/**/*.jsx"
   },
   "devDependencies": {
-    
+    "eslint" : "^5.14.1",
+    "eslint-plugin-react": "^7.12.4"
   },
   "browserslist": [
     ">0.2%",
