--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "axios": "^0.18.0",
     "axios-mock-adapter": "^1.15.0",
     "bootstrap": "3",
+    "chai": "^4.2.0",
     "change-case": "^3.0.2",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.9.1",
     "history": "^4.7.2",
+    "jsdom": "^13.2.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "^2.1.5",
     "redux": "^3.7.2",
@@ -32,7 +37,8 @@
     "lint": "eslint --fix src/**/*.js src/**/*.jsx"
   },
   "devDependencies": {
-    "eslint" : "^5.14.1",
+    "eslint": "^5.14.1",
+    "eslint-plugin-jest": "^22.3.0",
     "eslint-plugin-react": "^7.12.4"
   },
   "browserslist": [
